Adicionando links com template variables